--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="./public/images/logo_feher.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="./output.css" rel="stylesheet">
-    <title>Vite + React</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="./public/images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="./public/images/android-chrome-512x512.png">
+    <link rel="icon" type="image/png" href="./public/images/android-chrome-512x512.png">
+    <title>Dervalics Attila</title>
   </head>
   <body>
     <div id="root"></div>
